# gltf-hs

./: .gitmodules  CHANGELOG.md  LICENSE  README.md  gltf-easytensor.cabal  gltf-hs.cabal  stack.yaml
app/: Main.hs
src/: GltfEasytensor.hs  GltfTypes.hs
src/Data/Codec/: Gltf.hs
test/: .#Parsing.hs  Parsing.hs  Spec.hs
