cabal-version:       2.0
name:                gltf-easytensor
version:             0.0.0
synopsis:            See README for more info
description:         See README for more info
homepage:            https://github.com/o1lo01ol1o/gltf-easytensor
bug-reports:         https://github.com/o1lo01ol1o/gltf-easytensor/issues
license:             MIT
license-file:        LICENSE
author:              Tim Pierson
maintainer:          tim.pierson@gmail.com
copyright:           2018 Tim Pierson
category:            Utility
build-type:          Simple
extra-doc-files:     README.md
                   , CHANGELOG.md
tested-with:         GHC == 8.4.4

source-repository head
  type:                git
  location:            https://github.com/o1lo01ol1o/gltf-easytensor.git

library
  hs-source-dirs:      src
  exposed-modules:     GltfEasytensor, GltfTypes
                       

  build-depends:       base ^>= 4.11.1.0
                       , aeson
                       , text
                       , bytestring >= 0.10
                       , json-autotype
  
                     

  ghc-options:         -Wall
                       -Wincomplete-uni-patterns
                       -Wincomplete-record-updates
                       -Wcompat
                       -Widentities
                       -Wredundant-constraints
                       -fhide-source-paths
                       -Wmissing-export-lists
                       -Wpartial-fields

  default-language:    Haskell2010

executable gltf-easytensor
  hs-source-dirs:      app
  main-is:             Main.hs

  build-depends:       base ^>= 4.11.1.0
                     , gltf-easytensor
                     

  ghc-options:         -Wall
                       -threaded
                       -rtsopts
                       -with-rtsopts=-N
                       -Wincomplete-uni-patterns
                       -Wincomplete-record-updates
                       -Wcompat
                       -Widentities
                       -Wredundant-constraints
                       -fhide-source-paths
                       -Wmissing-export-lists
                       -Wpartial-fields

  default-language:    Haskell2010

test-suite gltf-easytensor-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs

  build-depends:       base ^>= 4.11.1.0
                     , gltf-easytensor
                     

  ghc-options:         -Wall
                       -threaded
                       -rtsopts
                       -with-rtsopts=-N
                       -Wincomplete-uni-patterns
                       -Wincomplete-record-updates
                       -Wcompat
                       -Widentities
                       -Wredundant-constraints
                       -fhide-source-paths
                       -Wmissing-export-lists
                       -Wpartial-fields

  default-language:    Haskell2010

benchmark gltf-easytensor-benchmark
  type:                exitcode-stdio-1.0
  hs-source-dirs:      benchmark
  main-is:             Main.hs

  build-depends:       base ^>= 4.11.1.0
                     , gauge
                     , gltf-easytensor
                     

  ghc-options:         -Wall
                       -threaded
                       -rtsopts
                       -with-rtsopts=-N
                       -Wincomplete-uni-patterns
                       -Wincomplete-record-updates
                       -Wcompat
                       -Widentities
                       -Wredundant-constraints
                       -fhide-source-paths
                       -Wmissing-export-lists
                       -Wpartial-fields

  default-language:    Haskell2010
