cabal-version:       2.0
name:                gltf-hs
version:             0.0.0
synopsis:            See README for more info
description:         See README for more info
homepage:            https://github.com/o1lo01ol1o/gltf-hs
bug-reports:         https://github.com/o1lo01ol1o/gltf-hs/issues
license:             MIT
license-file:        LICENSE
author:              Tim Pierson
maintainer:          tim.pierson@gmail.com
copyright:           2018 Tim Pierson
category:            Utility
build-type:          Simple
extra-doc-files:     README.md
                   , CHANGELOG.md
tested-with:         GHC == 8.6.5

source-repository head
  type:                git
  location:            https://github.com/o1lo01ol1o/gltf-hs.git

library
  hs-source-dirs:      src
  exposed-modules:     Data.Codec.Gltf
                       

  build-depends:       base >= 4.11.1.0
                       , aeson
                       , text
                       , deepseq
                       , scientific >= 0.3
                       , bytestring >= 0.10
                       , json-autotype
                       , json-alt
                       , unordered-containers
                       , containers
                       , lens
                       , directory
                       , base64-bytestring
                       , path
                       , text-conversions
                       , modern-uri > 0.2
                       , exceptions
                       , transformers >= 0.5
                       , semigroups >= 0.18
                       
  
                     

  ghc-options:         -Wall
                       -Wincomplete-uni-patterns
                       -Wincomplete-record-updates
                       -Wcompat
                       -Widentities
                       -Wredundant-constraints
                       -fhide-source-paths
                       -Wmissing-export-lists
                       -Wpartial-fields
                       -funbox-strict-fields 

  default-language:    Haskell2010

test-suite gltf-hs-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test

  main-is:             Spec.hs
  other-modules:       Parsing

  build-depends:       base >= 4.11.1.0
                     , gltf-hs
                     , pathwalk
                     , deepseq
                     , QuickCheck   >= 2.9 
                     , tasty
                     , directory
                     , HUnit
                     , filepath
                     , tasty-hunit
                     , lens
                     , path

                     

  ghc-options:         -Wall
                       -threaded
                       -rtsopts
                       -with-rtsopts=-N
                       -Wincomplete-uni-patterns
                       -Wincomplete-record-updates
                       -Wcompat
                       -Widentities
                       -Wredundant-constraints
                       -fhide-source-paths
                       -Wmissing-export-lists
                       -Wpartial-fields

  default-language:    Haskell2010

benchmark gltf-hs-benchmark
  type:                exitcode-stdio-1.0
  hs-source-dirs:      benchmark
  main-is:             Main.hs

  build-depends:       base ^>= 4.11.1.0
                     , gauge
                     , gltf-hs
                     , pathwalk
                     
                     
                     

  ghc-options:         -Wall
                       -O2
                       -fllvm
                       -threaded
                       -rtsopts
                       -with-rtsopts=-N
                       -Wincomplete-uni-patterns
                       -Wincomplete-record-updates
                       -Wcompat
                       -Widentities
                       -Wredundant-constraints
                       -fhide-source-paths
                       -Wmissing-export-lists
                       -Wpartial-fields

  default-language:    Haskell2010
